Page MenuHome GnuPG

Libgcrypt v1.11.0 make fails at cipher/blake2.c:834:6 (has no member named 'use_avx512')
Testing, NormalPublic

Description

With libgpg-error-1.50 installed on a GNU/Linux distribution, libgcrypt-1.11.0 make fails with the following error:

blake2.c:834:6: error: 'BLAKE2S_CONTEXT {aka struct BLAKE2S_CONTEXT_S}' has no member named 'use_avx512'; did you mean 'use_avx'?
c->use_avx512 = !!(features & HWF_INTEL_AVX512);

Changing cipher/blake2.c file at line 833 from:

#ifdef USE_AVX

to

#ifdef USE_AVX512

seems to fix the issue but I don't know if this is the intended outcome.

Details

Version
Libgcrypt v1.11.0

Revisions and Commits

Event Timeline

gniibe triaged this task as Normal priority.
gniibe added a subscriber: gniibe.

Thank you for your report, good catch.
It's introduced by the commit: rC909daa700e4b: blake2: add AVX512 accelerated implementations
And the bug is there since then.

The suggested fix of yours is right.
Pushing the fix now.

gniibe changed the task status from Open to Testing.Jul 4 2024, 4:19 AM