cipher:blake2: Fix for use_avx512.

* cipher/blake2.c (blake2s_init_ctx): Conditional with USE_AVX512.

--

GnuPG-bug-id: 7184
Reported-by: Aaron Howland
Fixing-commit: 909daa700e4b45d75469df298ee564b8fc2f4b72
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>